src/css/styles.scss
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;
    color: rgba(255, 255, 255, 0.87);

    background-color: #D9D9D9;
    background-color: #242424;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

}
*,*::after {
    margin: 0;
    max-width: 100vw;
    overflow: hidden;
}
a {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.87);
}

.np-header {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #2c2c2c;
    text-align: center;
    font-weight: lighter;
    font-size: 1.5rem;
    padding: 0.5rem 0rem;
    p {
        display: flex;
        gap: 0.3rem;
        align-items: center;
        justify-content: space-between;
    }
    a {
        position: absolute;
        right: 2rem;
        font-size: small;
        background-color: #585858;
        border-radius: 0.5rem;
        padding: 0.3rem;
        cursor: pointer;
        transition: 0.3s all ease;
    }
    a:hover {
        background-color: #414040;
    }
}

.np-navbar {
    display: flex;
    width: 100%;
    background-color: #2c2c2c;
    overflow:auto;
    flex-wrap: nowrap;
    text-align: center;
    font-weight: lighter;
    font-size: 1rem;
    // padding-left: 6rem;
    transition: 0.3s all ease;
    div {
        min-width: 7rem;
        background-color: #585858;
        border: #242424;
        border-radius: 0.5rem;
        margin: 0.3rem;
        transition: 0.3s all ease;
        cursor: pointer;
    }
    div:hover {
    background-color: #414040;
    }
}

.np-login {
    background-color: #585858;
    // padding: 2rem 5rem;
    border-radius: 1rem;
    // position: relative;
    button, input[type="submit"] {
        color: #000;
        height: 2rem;
        font-weight: bolder;
        background-color: #f7f7f7;
        border: none;
        border-radius: 0.4rem;
        transition: all 0.3s ease;
        cursor: pointer;
      }
      button:hover, input[type="submit"]:hover {
    background-color: #fff;
    transform: scale(105%);
    }
    form {
        padding: 0rem 5rem 2rem 5rem;
        display: flex;
        width: 20rem;
        flex-direction: column;
        grid-template-columns: repeat(2, 1fr);
        height: 100%;
        gap: 2rem;
        legend {
            font-size: larger;
        }
        .np-login-field {
            display: grid;
            gap: 0rem;
            input {
                height: 100%;
            }
        }
    }
    .np-login-options {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-between;
        padding: 0.5rem;
        height: 2rem;
        
        .np-login-return {
            width: 2rem;
            transition: all 0.3s ease;
            cursor: pointer;
        }
        .np-login-return:hover {
            transform: scale(110%);
        }
      }
    
}
@media (max-width: 768px) {
    .np-login {
        form {
            padding: 1rem;
        }
    }
}


    



.np-content {
    display: flex;
    flex: 1;
}
.np-displayer {
    display: flex;
    padding-top: 5rem;
    // max-width: 100%;
    gap: 3rem;
    flex-wrap: wrap;
    place-items: center;
    justify-content:space-evenly;
}



.np-main {
    width: 100%;
    padding-bottom: 3rem;
    min-height: 100vh;
}



.np-sidebar {
    padding-top: 3rem;
    align-items: center;
    text-align: center;
    background-color: #2c2c2c;
    
    background-size: -10%;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    
}

.np-sidebar-option {
    background-color: #585858;
    border-radius: 0.5rem;

    cursor: pointer;
    transition: 0.3s all ease;
    padding: 0.4rem;
    width: 4rem;
    margin: 0rem 0.4rem;
}
.np-sidebar-option:hover {
    background-color: #414040;
}





.np-note {
    --ck-color-base-background: transparent;
    --ck-color-base-border:transparent;
    --ck-color-toolbar-border: transparent;
    --ck-color-button-default-active-background: #585858;
    --ck-color-toolbar-background: transparent;
    --ck-color-text: transparent;

    background-color: #e2f188;
    height: 200vh;
    display: flex;
    // flex: 1;
    width: 100vw;
    justify-content: center;
    h1,h2,h3,h4,p,a,tr,td {
        color: #000;
    }
    .ck.ck-reset,
    .ck.ck-reset_all,
    .ck-reset_all *:not(.ck-reset_all-excluded *){
        width: 90%;
    }
    .ck-content, .ck-editor__editable {
        height: 180vh;
    }
}
.np-note:hover {
    --ck-color-toolbar-background: transparent;
    --ck-color-text: #262626;
}

.np-sticky-note {
    display: flex;
    flex-direction: column;
    color: #242424;
    height: 230px;
    width: 230px;
    text-align: center;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 0 20%, 20% 0);
    opacity: 90%;
    transition: 0.3s all ease;
    font-size: small;
    .np-sn-topbar {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        .np-sn-fold {
            content: "";
            width: 46px;
            height: 46px;
            background-color: rgba($color: #585858, $alpha: 0.2);
        }
        .np-sn-icon {
            max-width: 80px;
            height: auto;
            display: none;
        }
    }
    
    h1 {
        line-height:normal;
        color: #242424 ;
    }
    p {
        padding: 0rem 1rem ;
        color: #242424;
    }
    .np-sticky-note-content {
        height: 100%;
        cursor: pointer;
    }
}

.np-sticky-note:hover {
    .np-sn-icon {
        display: flex;
    }
    transform: scale(110%);
}
@media (max-width: 768px) {

    .np-sidebar {
        background-color: #242424;
        background: linear-gradient(149deg, rgb(68, 68, 68) 0%, rgb(27, 27, 27) 35%, rgb(85, 85, 85) 100%);
        position: fixed;
        z-index: 1;
        border-radius: 1rem;
        min-height: 50vh;
        left: -6rem;
        padding-right: 1rem ;
        transition: all 0.3s ease;
        top: 25vh;
    }
    .np-displayer {
        gap: 2rem 1rem;
    }

    .np-sticky-note {
        width: 10rem;
        height: 10rem;

        .np-sn-topbar {
            .np-sn-fold {
                width: 33px;
                height: 33px;
            }
            .np-sn-icon {
                display: flex;
            }
        }
        .np-sticky-note-content {
            h1 {
                font-size: 1rem;
            }
            p {
                font-size: 0.5rem;
            }
        }
    }
}

.footer {
    padding: 2rem 0;
    border-top: 3px solid #000 ;
    background-color: #2c2c2c;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    font-style: italic;
    height: 20vh;
    padding-left: 6rem;
    p {
        padding-bottom: 1rem;
        color: white;
    }
}

